--- a/src/App.css
+++ b/src/App.css
@@ -254,3 +254,20 @@
         width: 90px;
     }
 }
+
+
+.custom-select {
+    /* Add your styles here */
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1rem;
+    color: #333;
+}
+
+.custom-select option {
+    /* Add your styles for the options here */
+    background-color: #fff;
+    color: #333;
+}
