--- a/src/App.css
+++ b/src/App.css
@@ -271,3 +271,88 @@
     background-color: #fff;
     color: #333;
 }
+
+.carousel-container {
+    width: 300px;
+    height: 400px;
+    overflow-y: scroll;
+}
+
+.carousel-container img {
+    display: block;
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.marquee {
+    background-color: white;
+    color: #1572b8;
+    padding-top: 5px;
+    font-size: 20px;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 100vw;
+}
+
+.marquee span {
+    display: inline-block;
+    animation: marquee 20s linear infinite;
+}
+
+@keyframes marquee {
+    0% {
+        transform: translateX(200%);
+    }
+
+    100% {
+        transform: translateX(-150%);
+    }
+}
+
+.slick-prev:before,
+.slick-next:before {
+    color: #1572b8 !important;
+
+}
+
+
+.image-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.image-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 0;
+}
+
+.full-width {
+    width: 500px;
+    height: 500px;
+}
+
+.half-width {
+    width: 250px;
+    height: 250px;
+}
+
+.quarter-width {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+    width: 250px;
+    height: 250px;
+}
+
+.gallery-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
